--- a/home.html
+++ b/home.html
@@ -15,47 +15,70 @@
     <title>ERCINK</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #ffffff;">
-  <div class="container-fluid justify-content-start">
-    <a class="navbar-brand" style= "color: #52702b" href="#">
-    </a>
-    <button class="navbar-toggler" type="button" style="color:#52702b" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon" style= "color:#52702b" ></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav p-4">
-        <li class="nav-item">
-          <a class="nav-link active" style="color:#52702b"aria-current="page" href="home.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="ferns.html">pteridomania</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-green" href="plants.html">plants</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link text-green" href="birds.html">birds</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="mountains.html">mountains</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-green" href="buildings.html">buildings</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-green" href="others.html">others</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    
 
     <a href= /index.html class="ercinktitle">
       <h1 class="text-center p-3 mt-5">
       ERC.INK
     </h1>
     </a>
+    <nav class="navbar navbar-light" style="background-color: #f7f2f0">
+      <div class="container-fluid justify-content-center">
+        <a class="navbar-brand" style="color: #ffffff" href="#"> </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          style="color: #ffffff"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon" style="color: #ffffff"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav p-4">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html" style="color: #ffffff"
+                >home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                style="color: #ebccc4"
+                aria-current="page"
+                href="ferns.html"
+                >pteridomania</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/birds.html" style="color: #ebccc4"
+                >birds</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/plants.html" style="color: #ebccc4"
+                >plants</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/mountains.html " style="color: #ebccc4"
+                >mountains</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="buildings.html" style="color: #ebccc4"
+                >buildings</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
 
     <div class="container">
       <div class="row">
