--- a/plants.html
+++ b/plants.html
@@ -19,57 +19,63 @@
     <title>ERCINK</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #ffffff">
-      <div class="container-fluid justify-content-start">
-        <a class="navbar-brand" style="color: #52702b" href="#"> </a>
+    <h1 class="pteridomania text-center p-3 mt-5">plants</h1>
+    <nav class="navbar navbar-light" style="background-color: #f7f2f0">
+      <div class="container-fluid justify-content-center">
+        <a class="navbar-brand" style="color: #ffffff" href="#"> </a>
         <button
           class="navbar-toggler"
           type="button"
-          style="color: #52702b"
+          style="color: #ffffff"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon" style="color: #52702b"></span>
+          <span class="navbar-toggler-icon" style="color: #ffffff"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav p-4">
             <li class="nav-item">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="home.html" style="color: #52702b"
+                >home</a
+              >
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ferns.html">pteridomania</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="flowers.html">plants</a>
-            </li>
-
             <li class="nav-item">
               <a
                 class="nav-link active"
                 style="color: #52702b"
                 aria-current="page"
-                href="birds.html"
-                >birds</a
+                href="ferns.html"
+                >pteridomania</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mountains.html">mountains</a>
+              <a class="nav-link" href="/birds.html" style="color: #52702b"
+                >birds</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/plants.html" style="color: #ffffff"
+                >plants</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildings.html">buildings</a>
+              <a class="nav-link" href="mountains.html " style="color: #52702b"
+                >mountains</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="others.html">others</a>
+              <a class="nav-link" href="buildings.html" style="color: #52702b"
+                >buildings</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <h1 class="text-center p-3 mt-5">plants</h1>
 
     <div class="container">
       <div class="row">
