--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>ERCINK</title>
   </head>
@@ -47,30 +50,30 @@
             <li class="nav-item">
               <a
                 class="nav-link active"
-                style="color: #ebccc4"
+                style="color: #e7b3b3"
                 aria-current="page"
                 href="ferns.html"
                 >pteridomania</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/birds.html" style="color: #ebccc4"
+              <a class="nav-link" href="/birds.html" style="color: #e7b3b3"
                 >birds</a
               >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/plants.html" style="color: #ebccc4"
+              <a class="nav-link" href="/plants.html" style="color: #e7b3b3"
                 >plants</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mountains.html " style="color: #ebccc4"
+              <a class="nav-link" href="/mountains.html " style="color: #e7b3b3"
                 >mountains</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildings.html" style="color: #ebccc4"
+              <a class="nav-link" href="buildings.html" style="color: #e7b3b3"
                 >buildings</a
               >
             </li>
