nav color updates

--- a/plants.html
+++ b/plants.html
@@ -38,21 +38,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav p-4">
             <li class="nav-item">
-              <a class="nav-link" href="home.html" style="color: #52702b"
+              <a class="nav-link" href="home.html" style="color: #e7b3b3"
                 >home</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
-                style="color: #52702b"
+                style="color: #e7b3b3"
                 aria-current="page"
                 href="ferns.html"
                 >pteridomania</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/birds.html" style="color: #52702b"
+              <a class="nav-link" href="/birds.html" style="color: #e7b3b3"
                 >birds</a
               >
             </li>
@@ -63,12 +63,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mountains.html " style="color: #52702b"
+              <a class="nav-link" href="mountains.html " style="color: #e7b3b3"
                 >mountains</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildings.html" style="color: #52702b"
+              <a class="nav-link" href="buildings.html" style="color: #e7b3b3"
                 >buildings</a
               >
             </li>
