--- a/ferns.html
+++ b/ferns.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav p-4">
             <li class="nav-item">
-              <a class="nav-link" href="home.html" style="color: #52702b"
+              <a class="nav-link" href="home.html" style="color: #e7b3b3"
                 >home</a
               >
             </li>
@@ -57,23 +57,23 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/birds.html" style="color: #52702b"
+              <a class="nav-link" href="/birds.html" style="color: #e7b3b3"
                 >birds</a
               >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/plants.html" style="color: #52702b"
+              <a class="nav-link" href="/plants.html" style="color: #e7b3b3"
                 >plants</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mountains.html " style="color: #52702b"
+              <a class="nav-link" href="mountains.html " style="color: #e7b3b3"
                 >mountains</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildings.html" style="color: #52702b"
+              <a class="nav-link" href="buildings.html" style="color: #e7b3b3"
                 >buildings</a
               >
             </li>
