--- a/home.html
+++ b/home.html
@@ -29,11 +29,9 @@
 
 
     <div class="title">
-     <a href= /index.html class="ercinktitle">
        <h1 class="text-center">
        ERC.INK
        </h1>
-     </a>
     </div>
 
 
@@ -90,10 +88,10 @@
         <div class="container-fluid foot">
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="/index.html" class="erc-ink">ERC.INK</a> 
+                    <a href="/index.html" class="erc-ink">咯噔</a> 
                 </div>
                 <div class="col-sm-4">
-                    <h3 class="pteri">PTERIDOPHYTA</a> 
+                    <h3 class="pteri">ERC INK</a> 
                 </div>
                 <div class="col-sm-4">
                     <a href="https://www.instagram.com/erc.ink/" class="insta"target="_blank"><i class="fab fa-instagram"></i></a> 
