rename files + menu bar

--- a/bird.html
+++ b/bird.html
@@ -25,7 +25,7 @@
     <title>ERCINK</title>
   </head>
   <body>
-    <h1 class="text-center p-5 mt-5">birds</h1>
+    <h1 class="text-center p-5 mt-5">bird</h1>
     <nav class="navbar navbar-light" style="background-color: #f7f2f0">
       <div class="container-fluid justify-content-center">
         <a class="navbar-brand" style="color: #ffffff" href="#"> </a>
