--- a/home.html
+++ b/home.html
@@ -21,10 +21,27 @@
   <body>
     <header>
       <div class="menu">
-
+        <ul>
+          <li>
+            home
+          </li>
+          <li>
+            <a href="/fern.html">fern</a>
+          </li>
+          <li>
+            bird
+          </li>
+          <li>
+            plant
+          </li>
+          <li>
+            mountain
+          </li>
+          <li>
+            building
+          </li>
+        </ul>
       </div>
-
-
     </header>
 
 
