--- a/home.html
+++ b/home.html
@@ -23,22 +23,22 @@
       <div class="menu">
         <ul>
           <li>
-            home
+            <a href="/home.html">home</a>
           </li>
           <li>
             <a href="/fern.html">fern</a>
           </li>
           <li>
-            bird
+            <a href="/bird.html">bird</a>
           </li>
           <li>
-            plant
+            <a href="/plant.html">plant</a>
           </li>
           <li>
-            mountain
+            <a href="/mountain.html">mountain</a>
           </li>
           <li>
-            building
+            <a href="/building.html">building</a>
           </li>
         </ul>
       </div>
