--- a/fern.html
+++ b/fern.html
@@ -24,73 +24,41 @@
     <title>ERCINK</title>
   </head>
   <body>
-    <h1 class="pteridomania text-center p-5 mt-5">pteridomania</h1>
-    <nav class="navbar navbar-light" style="background-color: #f7f2f0">
-      <div class="container-fluid justify-content-center">
-        <a class="navbar-brand" style="color: #ffffff" href="#"> </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          style="color: #ffffff"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon" style="color: #ffffff"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav p-4">
-            <li class="nav-item">
-              <a class="nav-link" href="home.html" style="color: #e7b3b3"
-                >home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                style="color: #ffffff"
-                aria-current="page"
-                href="ferns.html"
-                >pteridomania</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/birds.html" style="color: #e7b3b3"
-                >birds</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="/plants.html" style="color: #e7b3b3"
-                >plants</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="mountains.html " style="color: #e7b3b3"
-                >mountains</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="buildings.html" style="color: #e7b3b3"
-                >buildings</a
-              >
-            </li>
-          </ul>
-        </div>
+    <header>
+      <div class="menu">
+        <ul>
+          <li>
+            <a href="/home.html">home</a>
+          </li>
+          <li>
+            <a href="/fern.html">fern</a>
+          </li>
+          <li>
+            <a href="/bird.html">bird</a>
+          </li>
+          <li>
+            <a href="/plant.html">plant</a>
+          </li>
+          <li>
+            <a href="/mountain.html">mountain</a>
+          </li>
+          <li>
+            <a href="/building.html">building</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </header>
+    <h1 class="pteridomania text-center">pteridomania</h1>
     <div class="container">
       <div class="row">
         <div class="col-sm-4 mb-3">
-          <img src="images/GULLY FERN.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/GULLY FERN.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4 mb-3">
-          <img src="images/KIOKIO.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/KIOKIO.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4 mb-3">
-          <img src="images/FERN 18.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 18.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -98,16 +66,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/BIGFERN.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/BIGFERN.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 19.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 19.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 16.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 16.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 25.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 25.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -115,16 +83,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3 mb-3">
-          <img src="images/FERN 15.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 15.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="images/FERN 20.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 20.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="images/FERN 27.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 27.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="images/FERN 8.jpg" class="img-fluid p-2 mt-5 border" />
+          <img src="images/FERN 8.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -134,25 +102,36 @@
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR I.jpg"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5 mb-5 border"
           />
         </div>
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR 2.jpg"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5 mb-5 border"
           />
         </div>
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR III.jpg"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5 mb-5 border"
           />
         </div>
       </div>
     </div>
-    <br />
-    <br />
-    <br />
+    <footer class="footer"></footer>
+        <div class="container-fluid foot">
+            <div class="row">
+                <div class="col-sm-4">
+                    <a href="/index.html" class="erc-ink">咯噔</a> 
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="pteri">ERC INK</a> 
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://www.instagram.com/erc.ink/" class="insta"target="_blank"><i class="fab fa-instagram"></i></a> 
+                </div>
+            </div>
+        </div>
   </body>
 </html>
