last pages - mountain/building added

--- a/building.html
+++ b/building.html
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <h1 class="text-center">plant</h1>
+    <h1 class= "text-center">building</h1>
 
 
     <footer class="footer">
