--- a/fern.html
+++ b/fern.html
@@ -10,12 +10,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/1883e88f00.js" crossorigin="anonymous"></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -48,7 +44,8 @@
         </ul>
       </div>
     </header>
-    <h1 class="pteridomania text-center">pteridomania</h1>
+    <h1 class="text-center">pteridomania</h1>
+    
     <div class="container">
       <div class="row">
         <div class="col-sm-4 mb-3">
@@ -102,24 +99,24 @@
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR I.jpg"
-            class="img-fluid p-2 mt-5 mb-5 border"
+            class="img-fluid p-2 mt-5 border"
           />
         </div>
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR 2.jpg"
-            class="img-fluid p-2 mt-5 mb-5 border"
+            class="img-fluid p-2 mt-5  border"
           />
         </div>
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR III.jpg"
-            class="img-fluid p-2 mt-5 mb-5 border"
+            class="img-fluid p-2 mt-5  border"
           />
         </div>
       </div>
     </div>
-    <footer class="footer"></footer>
+    <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
                 <div class="col-sm-4">
@@ -133,5 +130,6 @@
                 </div>
             </div>
         </div>
+    </footer>
   </body>
 </html>
