--- a/bird.html
+++ b/bird.html
@@ -11,12 +11,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/1883e88f00.js" crossorigin="anonymous"></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -25,137 +21,117 @@
     <title>ERCINK</title>
   </head>
   <body>
-    <h1 class="text-center p-5 mt-5">bird</h1>
-    <nav class="navbar navbar-light" style="background-color: #f7f2f0">
-      <div class="container-fluid justify-content-center">
-        <a class="navbar-brand" style="color: #ffffff" href="#"> </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          style="color: #ffffff"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon" style="color: #ffffff"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav p-4">
-            <li class="nav-item">
-              <a class="nav-link" href="home.html" style="color: #e7b3b3"
-                >home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                style="color: #e7b3b3"
-                aria-current="page"
-                href="ferns.html"
-                >pteridomania</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/birds.html" style="color: #ffffff"
-                >birds</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="/plants.html" style="color: #e7b3b3"
-                >plants</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/mountains.html " style="color: #e7b3b3"
-                >mountains</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="buildings.html" style="color: #e7b3b3"
-                >buildings</a
-              >
-            </li>
-          </ul>
-        </div>
+    <header>
+      <div class="menu">
+        <ul>
+          <li>
+            <a href="/home.html">home</a>
+          </li>
+          <li>
+            <a href="/fern.html">fern</a>
+          </li>
+          <li>
+            <a href="/bird.html">bird</a>
+          </li>
+          <li>
+            <a href="/plant.html">plant</a>
+          </li>
+          <li>
+            <a href="/mountain.html">mountain</a>
+          </li>
+          <li>
+            <a href="/building.html">building</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </header>
+
+    <h1 class="text-center">bird</h1>
 
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/KIWI-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/KIWI-01.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/Kororo-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/Kororo-01.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/Kookaburra.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/Kookaburra.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/shag-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/shag-01.png" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/yellowhead.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/yellowhead.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
           <img
             src="images/whitehead-01.png"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5 "
           />
         </div>
         <div class="col-sm-3">
-          <img src="images/tomtit.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/tomtit.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/kiwi3-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/kiwi3-01.png" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/kea-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/kea-01.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
           <img
             src="images/kingfisher-01.png"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5 "
           />
         </div>
         <div class="col-sm-3">
-          <img src="images/kiwi2-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/kiwi2-01.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/hihi.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/hihi.png" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/silvereye.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/silvereye.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/pukeko.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/pukeko.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/robin.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/robin.png" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/fantail-01.png" class="img-fluid p-2 mt-5 border" />
+          <img src="images/fantail-01.png" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
-
-    <br />
-    <br />
-    <br />
+<footer class="footer">
+        <div class="container-fluid foot">
+            <div class="row">
+                <div class="col-sm-4">
+                    <a href="/index.html" class="erc-ink">咯噔</a> 
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="pteri">ERC INK</a> 
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://www.instagram.com/erc.ink/" class="insta"target="_blank"><i class="fab fa-instagram"></i></a> 
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
