--- a/mountain.html
+++ b/mountain.html
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <h1 class="text-center">plant</h1>
+    <h1 class="text-center">mountain</h1>
 
 
     <footer class="footer">
