--- a/fern.html
+++ b/fern.html
@@ -10,6 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1883e88f00.js" crossorigin="anonymous"></script>
     
     <script
@@ -45,7 +48,7 @@
       </div>
     </header>
     <h1 class="text-center">pteridomania</h1>
-    
+
     <div class="container">
       <div class="row">
         <div class="col-sm-4 mb-3">
