created plant page

--- a/home.html
+++ b/home.html
@@ -76,17 +76,17 @@
       <div class="row">
         <div class="col-sm-3 mb-3">
         <img 
+          src="images/SCANDI LEAF.png" 
+          class= "img-fluid p-1 mt-4" />
+        </div>
+        <div class="col-sm-3 mb-3">
+        <img 
+          src="images/MATSUMOTO.png" 
+          class= "img-fluid p-1 mt-4" />
+        </div>
+        <div class="col-sm-3 mb-3">
+        <img 
           src="images/MOUNTAINS-01.png" 
-          class= "img-fluid p-1 mt-4" />
-        </div>
-        <div class="col-sm-3 mb-3">
-        <img 
-          src="images/INLE-01.png" 
-          class= "img-fluid p-1 mt-4" />
-        </div>
-        <div class="col-sm-3 mb-3">
-        <img 
-          src="images/GAMCHEON-01.png" 
           class= "img-fluid p-1 mt-4" />
         </div>
         <div class="col-sm-3 mb-3">
