--- a/plant.html
+++ b/plant.html
@@ -53,6 +53,51 @@
 
     <h1 class="text-center">plant</h1>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 mb-3">
+          <img src="images/FLOWERS.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/WHITE FLOWERS.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/POPPY.png" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 mb-3">
+          <img src="images/LOEWE SWEET PEA.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/GINKGO-01.png" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/LOEWE LIQUORICE.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mb-3">
+          <img src="images/GINKGO.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-6 mb-3">
+          <img src="images/BAMBOO.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mb-3">
+          <img src="images/SCANDI LEAF.png" class="img-fluid p-2 mt-5" />
+        </div>
+      
+      </div>
+    </div>
+
 
     <footer class="footer">
         <div class="container-fluid foot">
